--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # Uncomment if you wish to statically set a Webex Teams API access token
 # - if you do so, make sure not to version that file in a public repo
 # - if running the code from a private machine, setting secrets on the command line is recommended
-# - ACCESS_TOKEN= Nice try
+#ACCESS_TOKEN= Nice try
 
 # Secret used to generate an HMAC-SHA1 for each payload submitted to your bot
 # Optional but highly recommended to use a Secret when going to production
