--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Stève Sfartz (Cisco DevNet) <stsfartz@cisco.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "botkit": "0.6.14",
+    "http": "0.0.0",
     "node-env-file": "0.1.8"
   },
   "repository": {
